--- a/src/assets/stylesheets/Seats.css
+++ b/src/assets/stylesheets/Seats.css
@@ -1,3 +1,11 @@
+.btn-seat {
+    &:hover,
+    &:active {
+        color: aqua;
+       background: rgb(3, 67, 139);
+    }
+}
+
 .SeatsInformation {
     width: auto;
     background-color: white;
